# datazimmer

./: .gitignore  .readthedocs.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py
.github/workflows/: compatibility_test.yml  test.yml  twine_release.yml
datazimmer/: __init__.py  __main__.py  artifact_context.py  aswan_integration.py  config_loading.py  dvc_util.py  exceptions.py  explorer.py  full_auth.py  get_runtime.py  gh_actions.py  invoke_commands.py  metaprogramming.py  module_tree.py  naming.py  nb_generator.py  persistent_state.py  pipeline_element.py  pipeline_registry.py  primitive_types.py  project_runtime.py  raw_data.py  registry.py  reporting.py  typer_commands.py  utils.py  validation_functions.py  zenodo.py
datazimmer/metadata/: __init__.py  atoms.py  complete_id.py  datascript.py  high_level.py  namespace_metadata.py  project_metadata.py  scrutable.py
datazimmer/sql/: draw.py  loader.py
datazimmer/tests/: create_dogshow.py  test_auth.py  test_commands.py  test_config.py  test_full_integration.py  test_metaprog.py  test_pipereg.py  test_registry.py  test_runtime.py  test_scrutable.py  test_sql.py  test_util.py  test_validation.py  util.py
docs/: autosumm.rst  conf.py  index.rst  requirements.txt
docs/api/: datazimmer.AbstractEntity.rst  datazimmer.BaseEntity.rst  datazimmer.CompositeTypeBase.rst  datazimmer.DzAswan.rst  datazimmer.EntityClass.rst  datazimmer.Index.rst  datazimmer.IndexBase.rst  datazimmer.Nullable.rst  datazimmer.PersistentState.rst  datazimmer.ReportFile.rst  datazimmer.ScruTable.rst  datazimmer.SourceUrl.rst  datazimmer.TableFeaturesBase.rst  datazimmer.dump_dfs_to_tables.rst  datazimmer.get_raw_data_path.rst  datazimmer.parse_df.rst  datazimmer.register.rst  datazimmer.register_data_loader.rst  datazimmer.register_env_creator.rst  datazimmer.run_step.rst  sscutils.BaseEntity.rst  sscutils.Col.rst  sscutils.CompositeTypeBase.rst  sscutils.IndexBase.rst  sscutils.Nullable.rst  sscutils.PipelineRegistry.rst  sscutils.ScruTable.rst  sscutils.TableFactory.rst  sscutils.TableFeaturesBase.rst  sscutils.create_trepo_with_subsets.rst  sscutils.dump_dfs_to_tables.rst  sscutils.dump_dfs_to_trepos.rst  (+1 more)
docs_config/: current_release.rst
dogshow/: confs.yaml  minimal.py
notebooks/: create-dogshow-test-data.ipynb  create-test-artifacts.ipynb  doc-000-intro.ipynb  doc-001-intro.ipynb  doc-001-quickstart.ipynb  doc-002-conventions.ipynb  doc-002-glossary.ipynb  doc-003-mock-artifacts.ipynb  doc-003-mock-projects.ipynb  doc-004-glossary.ipynb  doc-004-rules-conventions.ipynb  doc-005-cli.ipynb  doc-005-rules.ipynb  doc-005.ipynb  doc-006-metadata.ipynb
sscutils/: __init__.py  artifact_context.py  config_loading.py  constants.py  exceptions.py  get_runtime.py  helpers.py  invoke_commands.py  metaprogramming.py  module_tree.py  naming.py  pipeline_registry.py  primitive_types.py  registry.py  scrutable_class.py  utils.py  validation_functions.py
(+288 files in other folders)
