[project]
name = "datazimmer"
dynamic = ["version", "description"]
authors = [{name = "Social Science Computing Unit Budapest", email = "borza.endre@krtk.hu"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["branthebuilder"]
doc = ["branthebuilder[doc]"]

[project.urls]
Homepage = "https://github.com/sscu-budapest/datazimmer"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.branb]
line-length = 88
