[project]
name = "datazimmer"
dynamic = ["version", "description"]
authors = [{name = "Social Science Computing Unit Budapest", email = "borza.endre@krtk.hu"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
scripts = {datazimmer = "datazimmer:app", dz = "datazimmer:app"}
dependencies = [
    "flit",
    "wheel>=0.37.0",
    "pip>=22.0.0",
    "setuptools>=60.0.0",
    "dvc[s3,ssh]",
    "parquetranger>=0.2.3",
    "colassigner>=0.2.2",
    "pyyaml",
    "structlog",
    "sqlalchemy",
    "toml",
    "typer",
    "cookiecutter",
    "sqlmermaid",
    "metazimmer",
    "zimmauth"
]

[project.optional-dependencies]
collect = ["aswan[remote]>=0.4.2"]
postgres = ["psycopg2"]
profile = ["pyinstrument"]
explorer = [
    "pandas_profiling", 
    "jupyter-book==0.12.2", 
    "sphinxcontrib-mermaid", 
    "beautifulsoup4",
    "html5lib",
    "cron-descriptor",
]
test = ["branthebuilder", "zimmauth[test]", "atqo", "faker"]
doc = ["branthebuilder[doc]"]
[project.urls]
Homepage = "https://github.com/sscu-budapest/datazimmer"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.branb]
line-length = 88
[tool.pytest.ini_options]
addopts = "-s"
